@@ -327,6 +327,20 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|IvyNode
+operator|.
+name|EvictionData
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|conflict
 operator|.
 name|LatestConflictManager
@@ -6147,7 +6161,135 @@ argument_list|)
 condition|)
 block|{
 comment|// resolve conflict has already be done with node with the same id
-comment|// => job already done
+comment|// => job already done, we just have to check if the node wasn't previously evicted in root ancestor
+name|EvictionData
+name|evictionData
+init|=
+name|node
+operator|.
+name|getEvictionDataInRoot
+argument_list|(
+name|node
+operator|.
+name|getRootModuleConf
+argument_list|()
+argument_list|,
+name|parent
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|evictionData
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// node has been previously evicted in an ancestor: we mark it as evicted and ensure selected are selected
+if|if
+condition|(
+name|evictionData
+operator|.
+name|getSelected
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|evictionData
+operator|.
+name|getSelected
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|IvyNode
+name|selected
+init|=
+operator|(
+name|IvyNode
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|selected
+operator|.
+name|isEvicted
+argument_list|(
+name|node
+operator|.
+name|getRootModuleConf
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|selected
+operator|.
+name|markSelected
+argument_list|(
+name|node
+operator|.
+name|getRootModuleConf
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"selecting "
+operator|+
+name|selected
+operator|+
+literal|" in "
+operator|+
+name|parent
+operator|+
+literal|" due to eviction of "
+operator|+
+name|node
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+name|node
+operator|.
+name|markEvicted
+argument_list|(
+name|evictionData
+argument_list|)
+expr_stmt|;
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"evicting "
+operator|+
+name|node
+operator|+
+literal|" by "
+operator|+
+name|evictionData
+argument_list|)
+expr_stmt|;
+block|}
 return|return;
 block|}
 name|Collection
