@@ -1637,12 +1637,9 @@ name|Collection
 name|resolved
 parameter_list|)
 block|{
-name|_evicted
-operator|.
-name|put
-argument_list|(
-name|rootModuleConf
-argument_list|,
+name|EvictionData
+name|evictionData
+init|=
 operator|new
 name|EvictionData
 argument_list|(
@@ -1654,6 +1651,31 @@ name|conflictManager
 argument_list|,
 name|resolved
 argument_list|)
+decl_stmt|;
+name|markEvicted
+argument_list|(
+name|evictionData
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|markEvicted
+parameter_list|(
+name|EvictionData
+name|evictionData
+parameter_list|)
+block|{
+name|_evicted
+operator|.
+name|put
+argument_list|(
+name|evictionData
+operator|.
+name|getRootModuleConf
+argument_list|()
+argument_list|,
+name|evictionData
 argument_list|)
 expr_stmt|;
 if|if
@@ -1666,7 +1688,10 @@ argument_list|()
 operator|.
 name|contains
 argument_list|(
-name|rootModuleConf
+name|evictionData
+operator|.
+name|getRootModuleConf
+argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -1674,7 +1699,10 @@ name|_rootModuleConfs
 operator|.
 name|put
 argument_list|(
-name|rootModuleConf
+name|evictionData
+operator|.
+name|getRootModuleConf
+argument_list|()
 argument_list|,
 literal|null
 argument_list|)
@@ -1683,7 +1711,10 @@ block|}
 comment|// bug 105: update selected data with evicted one
 if|if
 condition|(
-name|resolved
+name|evictionData
+operator|.
+name|getSelected
+argument_list|()
 operator|!=
 literal|null
 condition|)
@@ -1693,7 +1724,10 @@ control|(
 name|Iterator
 name|iter
 init|=
-name|resolved
+name|evictionData
+operator|.
+name|getSelected
+argument_list|()
 operator|.
 name|iterator
 argument_list|()
@@ -1722,7 +1756,10 @@ name|updateDataFrom
 argument_list|(
 name|this
 argument_list|,
-name|rootModuleConf
+name|evictionData
+operator|.
+name|getRootModuleConf
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -5980,6 +6017,144 @@ name|contains
 argument_list|(
 name|conf
 argument_list|)
+return|;
+block|}
+comment|/**      * Returns the eviction data for this node if it has been previously evicted in the most far parent      * of the given node, null otherwise (if it hasn't been evicted in root) for the       * given rootModuleConf.      * Note that this method only works if conflict resolution has already be done in all the ancestors.      *       * @param rootModuleConf      * @param parent      * @return      */
+specifier|public
+name|EvictionData
+name|getEvictionDataInRoot
+parameter_list|(
+name|String
+name|rootModuleConf
+parameter_list|,
+name|IvyNode
+name|parent
+parameter_list|)
+block|{
+name|IvyNode
+name|root
+init|=
+name|getRoot
+argument_list|(
+name|parent
+argument_list|)
+decl_stmt|;
+name|Collection
+name|selectedNodes
+init|=
+name|root
+operator|.
+name|getResolvedNodes
+argument_list|(
+name|getModuleId
+argument_list|()
+argument_list|,
+name|rootModuleConf
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|selectedNodes
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|IvyNode
+name|node
+init|=
+operator|(
+name|IvyNode
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|node
+operator|.
+name|getResolvedId
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|getResolvedId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+comment|// the node is part of the selected ones for the root: no eviction data to return
+return|return
+literal|null
+return|;
+block|}
+block|}
+comment|// we didn't find this mrid in the selected ones for the root: it has been previously evicted
+return|return
+operator|new
+name|EvictionData
+argument_list|(
+name|rootModuleConf
+argument_list|,
+name|this
+argument_list|,
+name|root
+operator|.
+name|getConflictManager
+argument_list|(
+name|getModuleId
+argument_list|()
+argument_list|)
+argument_list|,
+name|selectedNodes
+argument_list|)
+return|;
+block|}
+specifier|public
+specifier|static
+name|IvyNode
+name|getRoot
+parameter_list|(
+name|IvyNode
+name|parent
+parameter_list|)
+block|{
+name|IvyNode
+name|root
+init|=
+name|parent
+decl_stmt|;
+while|while
+condition|(
+name|root
+operator|.
+name|getParent
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|root
+operator|=
+name|root
+operator|.
+name|getParent
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|root
 return|;
 block|}
 block|}
